--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# OS
+.DS_store
+*cache
+
+# Temp
+notebook
+
+# Result files
+*.html
+*.geojson
+*.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
