--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,14 +20,29 @@ jobs:
               with:
                   python-version: "3.10"
 
-            - name: Install dependencies
+            - name: Install system dependencies
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install -y gdal-bin libgdal-dev python3-gdal
+
+            - name: Install Python dependencies
               run: |
                   python -m pip install --upgrade pip
                   pip install -e ".[docs]"
+                  # Explicitly install documentation dependencies if extras don't work
+                  pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints nbsphinx
 
             - name: Generate API docs
               run: |
+                  # Make sure the directory exists
+                  mkdir -p docs/source/api
                   python docs/generate_api_docs.py
+
+            - name: Debug information
+              run: |
+                  ls -la docs/source/api
+                  pip freeze
+                  python -c "import sys; print(sys.path)"
 
             - name: Build documentation
               run: |
