--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,56 +1,54 @@
-name: Build and Deploy Documentation
+name: Build Documentation
 
 on:
-    push:
-        branches:
-            - main
-        paths:
-            - "src/**"
-            - "docs/**"
-            - ".github/workflows/docs.yml"
+  push:
+    branches:
+      - main
+    paths:
+      - 'src/**'
+      - 'docs/**'
+      - '.github/workflows/docs.yml'
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-
-            - name: Set up Python
-              uses: actions/setup-python@v4
-              with:
-                  python-version: "3.10"
-
-            - name: Install system dependencies
-              run: |
-                  sudo apt-get update
-                  sudo apt-get install -y gdal-bin libgdal-dev python3-gdal
-
-            - name: Install Python dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -e ".[docs]"
-                  # Explicitly install documentation dependencies if extras don't work
-                  pip install sphinx sphinx-rtd-theme sphinx-autodoc-typehints nbsphinx
-
-            - name: Generate API docs
-              run: |
-                  # Make sure the directory exists
-                  mkdir -p docs/source/api
-                  python docs/generate_api_docs.py
-
-            - name: Debug information
-              run: |
-                  ls -la docs/source/api
-                  pip freeze
-                  python -c "import sys; print(sys.path)"
-
-            - name: Build documentation
-              run: |
-                  cd docs
-                  make html
-
-            - name: Deploy to GitHub Pages
-              uses: peaceiris/actions-gh-pages@v3
-              with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: ./docs/build/html
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      
+      - name: Install basic dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install sphinx sphinx-rtd-theme
+      
+      - name: Create basic documentation structure
+        run: |
+          mkdir -p docs/source
+          
+          # Create a minimal conf.py
+          echo 'project = "VERUS"' > docs/source/conf.py
+          echo 'copyright = "2025, VERUS Team"' >> docs/source/conf.py
+          echo 'author = "VERUS Team"' >> docs/source/conf.py
+          echo 'extensions = ["sphinx.ext.autodoc"]' >> docs/source/conf.py
+          echo 'html_theme = "sphinx_rtd_theme"' >> docs/source/conf.py
+          
+          # Create a minimal index.rst
+          echo 'VERUS Documentation' > docs/source/index.rst
+          echo '===================' >> docs/source/index.rst
+          echo '' >> docs/source/index.rst
+          echo 'Welcome to VERUS documentation.' >> docs/source/index.rst
+          
+      - name: Build documentation
+        run: |
+          cd docs
+          sphinx-build -b html source build/html
+      
+      - name: Archive documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: documentation
+          path: docs/build/html
