--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,54 +1,60 @@
-name: Build Documentation
+name: Build and Deploy Documentation
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'src/**'
-      - 'docs/**'
-      - '.github/workflows/docs.yml'
+    push:
+        branches:
+            - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      
-      - name: Install basic dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install sphinx sphinx-rtd-theme
-      
-      - name: Create basic documentation structure
-        run: |
-          mkdir -p docs/source
-          
-          # Create a minimal conf.py
-          echo 'project = "VERUS"' > docs/source/conf.py
-          echo 'copyright = "2025, VERUS Team"' >> docs/source/conf.py
-          echo 'author = "VERUS Team"' >> docs/source/conf.py
-          echo 'extensions = ["sphinx.ext.autodoc"]' >> docs/source/conf.py
-          echo 'html_theme = "sphinx_rtd_theme"' >> docs/source/conf.py
-          
-          # Create a minimal index.rst
-          echo 'VERUS Documentation' > docs/source/index.rst
-          echo '===================' >> docs/source/index.rst
-          echo '' >> docs/source/index.rst
-          echo 'Welcome to VERUS documentation.' >> docs/source/index.rst
-          
-      - name: Build documentation
-        run: |
-          cd docs
-          sphinx-build -b html source build/html
-      
-      - name: Archive documentation
-        uses: actions/upload-artifact@v3
-        with:
-          name: documentation
-          path: docs/build/html
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: "3.10"
+
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install sphinx sphinx-rtd-theme
+
+            - name: Create documentation structure
+              run: |
+                  mkdir -p docs/source
+
+                  # Create minimal conf.py if it doesn't exist
+                  if [ ! -f docs/source/conf.py ]; then
+                    echo 'project = "VERUS"' > docs/source/conf.py
+                    echo 'copyright = "2025, VERUS Team"' >> docs/source/conf.py
+                    echo 'author = "VERUS Team"' >> docs/source/conf.py
+                    echo 'extensions = ["sphinx.ext.autodoc"]' >> docs/source/conf.py
+                    echo 'html_theme = "sphinx_rtd_theme"' >> docs/source/conf.py
+                  fi
+
+                  # Create minimal index.rst if it doesn't exist
+                  if [ ! -f docs/source/index.rst ]; then
+                    echo 'VERUS Documentation' > docs/source/index.rst
+                    echo '===================' >> docs/source/index.rst
+                    echo '' >> docs/source/index.rst
+                    echo 'Welcome to VERUS documentation.' >> docs/source/index.rst
+                  fi
+
+            - name: Build documentation
+              run: |
+                  cd docs
+                  sphinx-build -b html source build/html
+
+            - name: Archive documentation
+              uses: actions/upload-artifact@v4
+              with:
+                  name: documentation
+                  path: docs/build/html
+
+            - name: Deploy to GitHub Pages
+              uses: peaceiris/actions-gh-pages@v4
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./docs/build/html
